# servus

./: .pre-commit-config.yaml  =  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: create-release.yml  lint.yml  pylint.yml  python-publish.yml
docs/servus/: __utils.html  requests.html
examples/: example_discord_bot.py
servus/: __init__.py  __utils.py  discord_utils.py  models.py  requests.py
tests/: conftest.py  test_client.py  test_servus.py
tests/unit/: test_discord_utils.py  test_requests.py  test_utils.py
